# blooapp-api

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cleaned_data.json  data.json  data_cleaned.json  data_modified.json  dependencies.py  encoded_image.txt  evaluation.ipynb  firestore.ipynb  firestore.py  items.json  retrieval.ipynb  server.py  templates.py  transformed_data.json  vectorestore.ipynb
app/agents/jokes/: joke_agent.py
app/agents/recycling/: main.py  nodes.py
app/evaluation/similar_items/: manual_evaluation_with_similar_items.xlsx
app/models/: __init__.py  image_request.py  image_response.py  request_body.py
data/: cleaned_data.json  cleaned_data_final.json  data.json  data_with_similar_items.json
evaluation/: batch1_evaluation.csv  batch1_evaluation.xlsx  batch2_evaluation.csv  batch2_evaluation.xlsx  batch3_evaluation.csv  batch3_evaluation.xlsx  consolidated_evaluation.csv  consolidated_evaluation.xlsx
evaluation/checkpoints/batch1/: llm_evaluation_results.csv  vision_model-preds.csv
evaluation/checkpoints/batch2/: llm_evaluation_results.csv  vision_model-preds.csv
evaluation/checkpoints/batch3/: llm_evaluation_results.csv  vision_model-preds.csv
images/test/batch3/: supplement glass bottle.avif
notebooks/: agent.ipynb  datacleaning.ipynb  evaluation.ipynb  firestore.ipynb  retrieval.ipynb  vectorestore.ipynb
notebooks/vectorstores/: typesense.ipynb
