[tool.poetry]
name = "blooapp-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2.1.1"
langchain = "^0.2.7"
langchain-openai = "^0.1.15"
python-dotenv = "^1.0.1"
jq = "^1.7.0"
langchain-pinecone =  "^0.1.1"
firebase-functions = "^0.4.1"
firebase-admin = "^6.5.0"
langchain-community = "^0.2.7"
langgraph = "^0.1.8"
tavily-python = "^0.3.4"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.4"
tiktoken = "^0.7.0"
ipywidgets = "^8.1.2"
pandas = "^2.2.2"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
